# naive_blas

./: .gitignore  Cargo.toml
src/: lib.rs
src/level_1/: axpy.rs  copy.rs  dot.rs  dotc.rs  dotu.rs  mod.rs  nrm2.rs  rot.rs  rotg.rs  rotm.rs  rotmg.rs  scal.rs  sdot.rs  swap.rs  xrot.rs  xrotg.rs  xrotm.rs  xrotmg.rs
